--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Recipes</h1>
+    <a href="recipes/spaghetti.html"><Spaghetti/a>
 </body>
 </html>
