Fixed index.html to list the recipe

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Recipes</h1>
-    <a href="spaghetti.html">Spaghetti</a>
+    <a href="spaghetti.html"><p>Spaghetti</p></a>
 </body>
 </html>
